Updates to the report.

--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -112,3 +112,8 @@
   howpublished = {\url{https://learnopengl.com/Getting-started/Coordinate-Systems}}
 }
 
+@misc{camera_projection,
+  title        = {Model View Projection},
+  howpublished = {\url{https://jsantell.com/model-view-projection/}}
+}
+
