--- a/docs/report/refs.bib
+++ b/docs/report/refs.bib
@@ -19,6 +19,21 @@
   howpublished = {\url{https://developer.mozilla.org/en-US/docs/Games/Techniques/3D_collision_detection}}
 }
 
+@misc{camera_projection,
+  title        = {Model View Projection},
+  howpublished = {\url{https://jsantell.com/model-view-projection/}}
+}
+
+@misc{cmake,
+  title        = {CMake, Open Source and Cross Platform Build System},
+  howpublished = {\url{https://cmake.org/}}
+}
+
+@misc{coordinate_systems,
+  title        = {Coordinate Systems},
+  howpublished = {\url{https://learnopengl.com/Getting-started/Coordinate-Systems}}
+}
+
 @misc{cpp-guidelines,
   title        = {C++ Core Guidelines},
   howpublished = {\url{https://isocpp.github.io/CppCoreGuidelines/CppCoreGuidelines}}
@@ -44,9 +59,19 @@
   howpublished = {\url{https://git-scm.com/}}
 }
 
+@misc{gltf,
+  title        = {glTF Runtime 3D asset delivery},
+  howpublished = {\url{https://www.khronos.org/gltf/}}
+}
+
 @misc{imgui,
   title        = {ImGui},
   howpublished = {\url{https://github.com/ocornut/imgui/}}
+}
+
+@misc{imguizmo,
+  title        = {ImGuizmo},
+  howpublished = {\url{https://github.com/CedricGuillemet/ImGuizmo}}
 }
 
 @article{indentation,
@@ -54,10 +79,12 @@
   howpublished = {\url{https://en.wikipedia.org/wiki/Indentation_style}}
 }
 
+
 @misc{rdna,
   title        = {RDNA Architecture},
   howpublished = {\url{https://www.amd.com/system/files/documents/rdna-whitepaper.pdf}}
 }
+
 
 @misc{render_man,
   title        = {RenderMan},
@@ -74,17 +101,16 @@
   howpublished = {\url{https://gpuopen.com/rgp/}}
 }
 
-
 @misc{unity,
   title        = {Unity},
   howpublished = {\url{https://unity.com/}}
 }
 
-
 @misc{unreal_engine,
   title        = {Unreal Engine},
   howpublished = {\url{https://www.unrealengine.com/en-US/}}
 }
+
 
 @misc{visualstudio,
   title        = {Microsoft Visual Studio 2022},
@@ -106,14 +132,8 @@
   howpublished = {\url{https://registry.khronos.org/vulkan/specs/1.3/html/vkspec.html/}}
 }
 
-
-@misc{coordinate_systems,
-  title        = {Coordinate Systems},
-  howpublished = {\url{https://learnopengl.com/Getting-started/Coordinate-Systems}}
-}
-
-@misc{camera_projection,
-  title        = {Model View Projection},
-  howpublished = {\url{https://jsantell.com/model-view-projection/}}
+@misc{font-awesome,
+  title        = {Font Awesome},
+  howpublished = {\url{https://fontawesome.com/}}
 }
 
